# .files

./: .copilotignore  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .secrets.baseline  .stow-global-ignore  .stow-local-ignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DOTNET_TROUBLESHOOTING.md  INSTALLATION_FLOW.md  JS_PACKAGES_INSTALL_FLOW.md  README.md  SECURITY-AUDIT-COMPLETION.md  SECURITY-AUDIT-SUMMARY.md  SECURITY-DOTFILES.md  SECURITY-ISSUES.md  Taskfile.yml  VM_DOTNET_FIX.md  install.sh  justfile  mkdocs.yml  opencode.json  package-lock.json  package.json  pr-reviewer.skill  pyproject.toml  stow.ps1
.just/: _helpers.just  dev.just  install.just  maintenance.just  mise.just  packages.just  stow.just  templates.just  verify.just  windows.just
.opencode/command/: stow_package.md
.sisyphus/plans/: zed-template-deploy.md
_docs/: .gitignore  BASH_MISE_CONFIGURATION.md  BREW_DEDUPLICATION.md  BUN_PATH_CONFIGURATION.md  CHANGES_JAN_29_2026.md  COMPLETE_SUMMARY_JAN_29_2026.md  COMPLETION_SUMMARY.md  ENV_SETUP_GUIDE.md  HOMEBREW_LINUX_SKIP.md  HOME_DETECTION_FIX.md  INSTALL_MODERN_FONTS_GUIDE.md  INSTALL_PROFILES.md  JS_PACKAGES_HANG_FIX_JAN_29_2026.md  PACKAGE_STRUCTURE_REORGANIZATION.md  SIMPLIFIED_ARCHITECTURE.md  STOW_BACKUP_DELETE_FIX_JAN_29_2026.md  STOW_HANG_FIX_JAN_29_2026.md  WINDOWS_RDP_VM_SETUP.md  package-system.md
_docs/skills/: commit-types-reference.md  (+2 more)
_scripts/: GIT-ALIASES.md  README.md  STOW_GUIDE.md  WINDOWS-COMPLETE.md  bootstrap.sh  doctor.sh  install.ps1  install.sh  uninstall.ps1  verify.sh
acpi/: check-lid-on-startup.sh  hypr-utils.sh  install-monitor-auto-switch.sh  lid-close.sh  lid-open.sh
alacritty/: README.md
bash/: .bash_profile  .bashrc
bat/: README.md
delta/: README.md
docs/: BASH_MISE_CONFIGURATION.md  COMPLETE_SUMMARY_JAN_29_2026.md  SIMPLIFIED_ARCHITECTURE.md  STOW_FIX_JAN_29_2026.md  STOW_HANG_FIX_JAN_29_2026.md  index.md
dotfiles_docs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ghostty/: README.md
git/: .gitconfig  .gitconfig.template  .gitignore_global  README.md
hypr/: README.md
mise/: README.md
nushell/: README.md
nvim/: LAZYVIM_GUIDE.md  README.md
omarchy/: README.md  branding  current
omarchy_backup/: README.md  themes
powershell/: README.md
scripts/: README.md  check-dotnet.sh  install-clawdbot.sh  install-dotnet.sh  install-essentials.sh  install-js-packages.sh  install-mise.sh  install-modern-fonts.sh  install-uv-tools.sh  install-zsh.sh  manage-stow.sh
starship/: README.md  starship.toml
themes/: README.md
uv/: README.md  STRUCTURE.md  pyproject.toml
uv/.config/uv/: uv.toml
zellij/: README.md
zsh/: .env.sample  .envrc.sample  .private.envrc.sample  .zshrc  README.md
(+306 files in other folders)
